--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 /*your CSS goes here*/
 .inputbox {
-    background-color: lightyellow;
+    background-color: #ffffe5;
+    margin-bottom: 7px;
 }
 
 #lname {
@@ -9,11 +10,15 @@
 
 #instructions {
     border: 1px solid black;
-    display: inline-block;
-    padding: 5px;
+    width: 700px;
+    padding: 10px;
 }
 
 form {
     padding: 5px;
+    margin-top: 30px;
 }
-/*
+
+body {
+    font-family: sans-serif;
+}
